--- a/src/app/cards-page/cards-page.component.html
+++ b/src/app/cards-page/cards-page.component.html
@@ -12,18 +12,49 @@
     [formGroup]="dropdownForm" 
     (ngSubmit)="onSubmit()"
 >
-    <select multiple formControlName="colors">
+    <div class="colors__container">
+        <h2 (click)="onSelect('colors')">Colors:</h2>
+        <div [hidden]="!(showCheckbox === 'colors')">
+            <div class="colors" *ngFor="let color of filterByColors">
+                <label>{{ color }}
+                    <input 
+                        type="checkbox" 
+                        [value]="color" 
+                        (change)="onCheckboxChange($event, 'colors')" 
+                    />
+                </label>
+            </div>
+        </div>
+    </div><br /><br /><br /><br />
+
+    <div class="types__container">
+        <h2 (click)="onSelect('types')">Types:</h2>
+        <div *ngIf="filterByTypes.length === 0">Loading...</div>
+        <div [hidden]="!(showCheckbox === 'types')">
+            <div class="types"  *ngFor="let type of filterByTypes">
+                <label>{{ type }}
+                    <input 
+                        type="checkbox" 
+                        [value]="type" 
+                        (change)="onCheckboxChange($event, 'types')" 
+                    />
+                </label>
+            </div>
+        </div>
+    </div><br /><br /><br /><br />
+
+    <!-- <select multiple formControlName="colors">
         <option *ngFor="let color of filterByColors" [ngValue]="color">
             {{ color }}
         </option>
-    </select>
+    </select> -->
 
-    <select multiple formControlName="types">
+    <!-- <select multiple formControlName="types">
         <option *ngIf="filterByTypes.length === 0" disabled>Loading...</option>
         <option *ngFor="let type of filterByTypes" [ngValue]="type">
             {{ type }}
         </option>
-    </select>
+    </select> -->
 
     <select multiple formControlName="name">
         <option value="ascending">Ascending</option>
@@ -42,46 +73,29 @@
 <h3 routerLink="/home">Logout</h3>
 
 <div *ngIf="!showFilteredCards">
-    <div *ngFor="let card of cards">
-        <h2>Set: {{ card.setName }}</h2>
-        <h2>Card name: {{ card.name }}</h2>
-        <div *ngIf="card.types.length > 0">
-            <h4>Types:</h4>
-            <ul>
-                <li *ngFor="let type of card.types">{{ type }}</li>
-            </ul>
-        </div>
-        <div *ngIf="card.colors.length > 0">
-            <h4>Colors:</h4>
-            <ul>
-                <li *ngFor="let color of card.colors">{{ color }}</li>
-            </ul>
-        </div>
-        <br /><br /><br /><br /><br /><br />
+    <div class="card__container">
+        <app-magic-card 
+            *ngFor="let newCard of cards" 
+            [card]="newCard"
+        >
+        </app-magic-card>
     </div>
+
 </div>
 
 <div *ngIf="showFilteredCards">
-    <div *ngFor="let card of filteredCards">
-        <h2>Set: {{ card.setName }}</h2>
-        <h2>Card name: {{ card.name }}</h2>
-        <div *ngIf="card.types.length > 0">
-            <h4>Types:</h4>
-            <ul>
-                <li *ngFor="let type of card.types">{{ type }}</li>
-            </ul>
-        </div>
-        <div *ngIf="card.colors.length > 0">
-            <h4>Colors:</h4>
-            <ul>
-                <li *ngFor="let color of card.colors">{{ color }}</li>
-            </ul>
-        </div>
-        <br /><br /><br /><br /><br /><br />
+    <h2>Found {{ filteredCards.length }} results.</h2>
+    <div class="card__container">
+        <app-magic-card 
+            *ngFor="let newCard of filteredCards" 
+            [card]="newCard"
+         >
+    </app-magic-card>
     </div>
+
 </div>
 
-<div *ngIf="filteredCards.length < 1 && !isLoading">
+<div *ngIf="filteredCards.length < 1 && !isLoading && showFilteredCards">
     <h2>No such card was found.</h2>
 </div>
 
