--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,2 +1,11 @@
+// base
+@import './base/common';
+
 // elements
 @import './elements/magic-card';
+@import './elements/header';
+@import './elements/button';
+@import './elements/input';
+
+// pages
+@import './pages/login';
