--- a/src/assets/scss/elements/_magic-card.scss
+++ b/src/assets/scss/elements/_magic-card.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-bottom: 5%;
+    margin-top: 250px;
     align-items: center;
     justify-content: space-around;
     text-align: center;
@@ -13,14 +13,14 @@
     color: #eee;
     perspective: 1000px;
     perspective-origin: 50% 50%;
-    animation: animation 100s linear infinite;
+    animation: moving-stars 100s linear infinite;
 
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     line-height: 1.8em;
     padding: 50px;
-    
-    margin-bottom: 15%;
+
+    margin-bottom: 10%;
     width: 550px;
     height: auto;
     border-radius: 2%;
@@ -28,7 +28,7 @@
 
     &__header:nth-child(2) {
         font-size: 5.6rem;
-        font-family: 'Lobster', cursive;
+        font-family: "Lobster", cursive;
     }
 
     &__header {
@@ -60,27 +60,91 @@
     }
 }
 
-@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
-
-body {
-  background: #fff;
-}
-
-
-@keyframes animation {
-   100%{
-    background-position:0px -3000px;
-  }
-}
-
-
-body {
-    background-image: url("src/assets/images/night__sky.jpg");
+.card-header {
     color: yellow;
+    margin-top: 0;
+}
+
+.not-found__container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    & .card-content {
+        text-align: center;
+    }
+
+    & .card-body {
+        display: flex;
+        align-items: center;
+    }
+
+    & .img-responsive {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@keyframes moving-stars {
+    100% {
+        background-position: 0px -3000px;
+    }
+}
+
+.loading__container {
+    margin-top: 10%;
+
+    & h2 { text-align: center; }
+    
+    .lds-circle {
+        display: flex;
+        transform: translateZ(1px);
+        justify-content: center;
+        width: 120px;
+        margin-left: auto;
+        margin-right: auto;
+    
+        &:hover {
+            cursor: pointer;
+            & > div {
+                background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80");
+            }
+        }
+    
+    }
+    
+    .lds-circle > div {
+        display: inline-block;
+        width: 104px;
+        height: 104px;
+        margin: 8px;
+        border-radius: 50%;
+        background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.7ROEWo5vyZGKGUsxojejlwHaEo%26pid%3DApi&f=1');
+        animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    }
+}
+
+@keyframes lds-circle {
+    0%,
+    100% {
+        animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+    }
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(1800deg);
+        animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+    }
+    100% {
+        transform: rotateY(3600deg);
+    }
 }
 
 
-@media (max-width: 500px){
+/* Responsiveness */
+
+@media (max-width: 500px) {
     .card {
         width: 200px;
         padding-left: 20px;
@@ -88,7 +152,7 @@ body {
         &__img {
             width: 170px;
             height: 260px;
-            
+
             &--not-available {
                 width: 50px;
                 height: 50px;
@@ -101,7 +165,3 @@ body {
         }
     }
 }
-
-
-
-
