--- a/src/app/shared/error/error.component.html
+++ b/src/app/shared/error/error.component.html
@@ -1,10 +1,9 @@
-<div style="display: flex; align-items: center; flex-direction: column;">
-    <div 
-        class="card text-light bg-danger mb-3" 
-        style="max-width: 50rem; text-align: center;" 
-    >
-        <div class="card-body">
-            <h3 class="card-header">{{ error }}</h3>
-        </div>
+<div class="error">
+    <div class="card">
+        <h3 class="error-header">{{ error }}</h3>
+        <h3>Commander, our ship was lost in SPACE!</h3>
+        <h3 class="card-header">Commander, Cygnus star was lost in SPACE!</h3>
+        <h3>Commander, Ursa Major 131 was lost in SPACE!</h3>
+        <h3 class="card-header">Commander, calculated distance was 131.59 and it was lost in SPACE!</h3>
     </div>
 </div>
