--- a/src/assets/scss/elements/_magic-card.scss
+++ b/src/assets/scss/elements/_magic-card.scss
@@ -85,6 +85,22 @@
     }
 }
 
+.error {
+    display: flex; 
+    align-items: center; 
+    flex-direction: column;
+    justify-content: center;
+
+    & .card {
+        text-align: center;
+        height: 250px;
+
+        & .error-header {
+            color: red;
+        }
+    }
+}
+
 @keyframes moving-stars {
     100% {
         background-position: 0px -3000px;
