--- a/src/assets/scss/elements/_magic-card.scss
+++ b/src/assets/scss/elements/_magic-card.scss
@@ -160,9 +160,9 @@
 
 /* Responsiveness */
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .loading__container {
-        margin-top: 0;
+        margin-top: -250px;
 
         & h2 { margin-top: 0; }
     }
