--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -3,7 +3,7 @@
 
 // elements
 @import './elements/magic-card';
-@import './elements/header';
+@import './elements/header/header';
 @import './elements/button';
 @import './elements/input';
 
